# LenexPy

./: .gitignore  CHANGELOG.md  delimetr.py  delimetr_enum.py  delimetr_xmlenum.py  heat.xml  meet.lxf  meet.xml  output.xml  parser.py  pyproject.toml  requirements.txt  setup.py  starlist.xml  test.py  test2.lef  test2.xml  text.py  validator.py
.github/workflows/: python-publish.yml
lenexpy/: __init__.py  adapters.py  strenum.py
lenexpy/decoder/: __init__.py  decoder.py  encoder.py  lef_decoder.py  lef_encoder.py  lxf_decoder.py  lxf_encoder.py
lenexpy/models/: _bootstrap.py  agedate.py  agegroup.py  athelete.py  base.py  club.py  coach.py  common.py  constructor.py  contact.py  course.py  currency.py  entry.py  event.py  fee.py  gender.py  handicap.py  heat.py  judge.py  lenex.py  meet.py  meetinfoentry.py  meetinforecord.py  nation.py  official.py  pointtable.py  pool.py  qualify.py  ranking.py  reactiontime.py  record.py  recordlist.py  relaymeet.py  relayposition.py  relayrecord.py  replayposition.py  result.py  session.py  split.py  startlist.py  (+7 more)
lenexpy/models_st/: athelete.py  entry.py  heat.py  result.py  split.py
scripts/: parser.py  process_fixtures.py
tests/: test_fixtures.py  test_parser.py
tests/fixtures/: meet.json
tests/fixtures/examples/: example-entries.lxf  example-records.lxf  example-results.lxf
tests/fixtures/meets/: Городские_соревнования_по_плаванию_Золотой_резерв_г_Королев_RUS.lxf  Кубок_Главы_городского_округа_Власиха_Московской_области_5_этап_Финал_п_Власиха_RUS.lxf  Люблино_Подводный_спорт.lxf  Подводка.lxf  Подводка_Финал.lxf  (+9 more)
(+14 files in other folders)
