[project]
name = "lenexpy"
version = "0.1.0"
description = ""
authors = [
    {name = "LordCode",email = "9999269010dddd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-xml (>=2.18.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
